app/components/header/style.scss
@import "../base.scss";

.app-header--wide-logo {
  @include govuk-media-query($from: desktop) {
    .govuk-header__logo {
      width: auto;
    }

    .govuk-header__content {
      width: auto;
      float: right;
    }
  }
}

.govuk-header__container {
  .app-header--development & {
    border-bottom-color: govuk-colour("dark-grey");
  }

  .app-header--qa & {
    border-bottom-color: govuk-colour("orange");
  }

  .app-header--review & {
    border-bottom-color: govuk-colour("purple");
  }

  .app-header--rollover & {
    border-bottom-color: govuk-colour("turquoise");
  }

  .app-header--staging & {
    border-bottom-color: govuk-colour("red");
  }

  .app-header--sandbox & {
    border-bottom-color: govuk-colour("purple");
  }
}

